--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,2 +1,62 @@
 <h2>物件登録</h2>
-<%= render 'form' %>
+<%= form_with(model: @property,local: true) do |form| %>
+    <% if @property.errors.any? %>
+        <div id='error_explanation'>
+            <ul>
+                <p><%= @property.errors.count %>件のエラーがあります</p>
+                    <% @property.errors.full_messages.each do |msg| %>
+                        <li><%= msg %></li>
+                    <% end %>
+            </ul>
+        </div>
+    <% end %>
+    
+    <div id='property_property_name'>
+        <%= form.label :物件名 %>
+        <%= form.text_field :property_name %>
+    </div>
+    
+    <div id='property_rent'>
+        <%= form.label :賃料 %>
+        <%= form.text_field :rent %>円
+    </div>
+    
+    <div id='property_address'>
+        <%= form.label :住所 %>
+        <%= form.text_field :address %>
+    </div>
+    
+    <div id='property_age'>
+        <%= form.label :築年数 %>
+        <%= form.text_field :age %>年
+    </div>
+    
+    <div id='property_remarks'>
+        <%= form.label :備考 %>
+        <%= form.text_area :remarks %>
+    </div>
+    
+    <hr>
+    
+    <%= form.fields_for :nearest_stations do |g| %>
+        
+        <div id='nearest_station_route_name'>
+            <%= g.label :路線名 %>
+            <%= g.text_field :route_name %>
+         </div>
+        
+        <div id='nearest_station_station_name'>
+            <%= g.label :駅名 %>
+            <%= g.text_field :station_name %>
+        </div>
+        
+        <div id='nearest_station_walking_minutes'>
+            <%= g.label :徒歩分数 %>
+            <%= g.text_field :walking_minutes %>分
+        </div>
+    <% end %>
+    
+    <%= form.submit '登録する' %>
+<% end %>
+
+<%= link_to '戻る',:back %>
