--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= property.remarks %></td>
         <td><%= link_to '詳細',property_path(property.id) %></td>
         <td><%= link_to '編集',edit_property_path(property.id) %></td>
-        <td><%= link_to '詳細',property_path(property.id),method: :delete,data: {confirm: '本当に削除してよろしいですか?'} %></td>
+        <td><%= link_to '削除',property_path(property.id),method: :delete,data: {confirm: '本当に削除してよろしいですか?'} %></td>
     </tr>
     <% end %>
 </table>
