最寄り駅の数を作成しました

--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -37,9 +37,10 @@
     </div>
     
     <hr>
+    <% number = 0 %>
     
     <%= form.fields_for :nearest_stations do |g| %>
-        
+        <h2>最寄り駅<%= number += 1 %></h2>
         <div id='nearest_station_route_name'>
             <%= g.label :路線名 %>
             <%= g.text_field :route_name %>
