--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -39,7 +39,7 @@
     <hr>
     
     <%= form.fields_for :nearest_stations do |g| %>
-        
+        <h2>最寄り駅</h2>
         <div id='nearest_station_route_name'>
             <%= g.label :路線名 %>
             <%= g.text_field :route_name %>
