--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -10,13 +10,14 @@
 
 <hr>
 
-<h2>最寄り駅1</h2>
+<% number = 0 %>
+
 
 <table>
     <tr>
-
+        
         <% @property.nearest_stations.each do |nearest_station| %>
-
+            <h2>最寄り駅<%= number += 1 %></h2>
             <p><%= nearest_station.route_name %></p>
             
             <p><%= nearest_station.station_name %></p>
